fix: Color contrast a11y issues on homepage

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,7 +32,7 @@
   margin: 0 auto;
   margin-bottom: 240px;
   height: 450px;
-  background: var(--black9);
+  background: #1f272a;
   border-radius: var(--space-04);
   box-shadow: 5px 10px 50px rgba(0, 0, 0, 0.25);
   color: var(--black0);
